غيرت لون الخلفية

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <div class="feature-cards">
         <div class="feature-card">
             <i class="fa-solid fa-users"></i>
-            <h3>إدارة الموظفين</h3>
+            <h3>إدارةnnnn الموظفين</h3>
             <p>أضف، عدّل أو احذف بيانات الموظفين بسهولة وبدون تعقيد.</p>
         </div>
         <div class="feature-card">
