--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>نظام إدارة الموظفين</title>
+<!-- إضافة خط ديواني بنت -->
+<link href="https://fonts.googleapis.com/css2?family=Diwani+Bente:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <style>
@@ -203,9 +206,16 @@
 </section>
 
 <!-- تذييل الصفحة -->
-<footer>
-    جميع الحقوق محفوظة &copy; 2026 نظام إدارة الموظفين
+<!-- تذييل الصفحة -->
+<footer style="font-family: 'Diwani Bente', cursive; background-color:#1f2937; color:#fff; text-align:center; padding:20px 30px; margin-top:50px;">
+    جميع الحقوق محفوظة &copy; 2026 | تصميم وتطوير: عبدالحافظ المخلافي | نظام إدارة الموظفين
 </footer>
 
 </body>
 </html>
+<!--
+git add .
+git commit -m "وصف التعديل"
+git push
+
+-->
