--- a/index.html
+++ b/index.html
@@ -206,10 +206,24 @@
 </section>
 
 <!-- تذييل الصفحة -->
-<!-- تذييل الصفحة -->
-<footer style="font-family: 'Diwani Bente', cursive; background-color:#1f2937; color:#fff; text-align:center; padding:20px 30px; margin-top:50px;">
-    جميع الحقوق محفوظة &copy; 2026 | تصميم وتطوير: عبدالحافظ المخلافي | نظام إدارة الموظفين
+<footer style="
+    font-family: 'Diwani Bente', cursive;
+    background-color:#1f2937;
+    color:#fff;
+    text-align:center;
+    padding:20px 30px;
+    margin-top:50px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+">
+    <span>جميع الحقوق محفوظة &copy; 2026</span>
+    <span>تصميم وتطوير: عبدالحافظ المخلافي</span>
+    <span>نظام إدارة الموظفين</span>
 </footer>
+
 
 </body>
 </html>
