--- a/index.html
+++ b/index.html
@@ -208,23 +208,44 @@
 <!-- تذييل الصفحة -->
 <footer style="
     font-family: 'Diwani Bente', cursive;
-    background-color:#1f2937;
-    color:#fff;
+    background-color:#111827;
     text-align:center;
-    padding:20px 30px;
+    padding:30px 20px;
     margin-top:50px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    justify-content: center;
-    align-items: center;
+    display:flex;
+    flex-direction:column;
+    gap:8px;
+    justify-content:center;
+    align-items:center;
 ">
-    <span>جميع الحقوق محفوظة &copy; 2026</span>
-    <span>تصميم وتطوير: عبدالحافظ المخلافي</span>
-    <span>نظام إدارة الموظفين</span>
+    <span style="
+        font-size:20px;
+        background: linear-gradient(90deg, #facc15, #f43f5e, #3b82f6);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight:700;
+    ">
+        جميع الحقوق محفوظة &copy; 2026
+    </span>
+    <span style="
+        font-size:22px;
+        background: linear-gradient(90deg, #22c55e, #10b981, #06b6d4);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight:700;
+    ">
+        تصميم وتطوير: عبدالحافظ المخلافي
+    </span>
+    <span style="
+        font-size:20px;
+        background: linear-gradient(90deg, #f59e0b, #f43f5e, #8b5cf6);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight:700;
+    ">
+        نظام إدارة الموظفين
+    </span>
 </footer>
-
-
 </body>
 </html>
 <!--
